data/derived/sp14/progs/unify/prog0176.ml.out
Characters 77-89:
  | h::m::t -> (mulByDigit m::t) :: ( (h*i)/10 ) + (m*i) mod 10 :: ( (h*i) mod 10 ) :: [];;
                ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list list
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a list -> 'b list list
